--- a/Bayesian DNA Barcode Gap.tex
+++ b/Bayesian DNA Barcode Gap.tex
@@ -146,7 +146,7 @@ The proposed Bayesian model outlined herein has a straightforward interpretation
 
 \section{Case Study}
 
-Herein, the \textit{Agabus} CYTB dataset analyzed by \citet{phillips2024measure} is revisited. \\ Specifically, the proposed Bayesian model is demonstrated on the species \textit{A. bipustulatus} and \textit{A. nevadensis}, since these taxa were represented by the most and the least specimen records, respectively ($n$ = 701 and $n$ = 2) following sequence processing using the R package {\tt MACER} \cite{young2021macer} detailed in \citet{phillips2024measure}. DNA barcode gap estimation is only possible for species having at least two specimen records. This dataset is a prime illustrative example since the two considered species are each other's nearest neighbour.
+Herein, the \textit{Agabus} CYTB dataset analyzed by \citet{phillips2024measure} is revisited. \\ Specifically, the proposed Bayesian model is demonstrated on the species \textit{A. bipustulatus} and \textit{A. nevadensis}, since these taxa were represented by the most and the least specimen records, respectively ($n$ = 701 and $n$ = 2) following sequence processing using the R package {\tt MACER} \cite{young2021macer} detailed in \citet{phillips2024measure}. Note, DNA barcode gap estimation is only possible for species having at least two specimen records. This dataset is a prime illustrative example in several respects. First, from a statistical viewpoint, sample sizes reflect extremes in reliable parameter estimation. Second, from a DNA barcoding perspective, \textit{Agabus} comprises about 200 extant species according to the Global Biodiversity Information Facility (GBIF) at the time of writing; yet, due to the level of convenience sampling inherent in taxonomic collection efforts for this genus, adequate representation is far from being fully realized.
 
 
 
@@ -229,19 +229,19 @@ JDP wrote the manuscript, wrote R and Stan code, as well as analysed and interpr
 \begin{tabular}{cccc} \hline
 
 \textbf{Species} & \textbf{Parameter} & \textbf{MLE (95\% CI)} & \textbf{Bayes Est. (95\% CrI)} \\  \hline
-\textit{A. bipustulatus} & $p_x/p_\mathrm{lwr}$ & 1 (1, 1) & \\
-\textit{A. bipustulatus} & $q_x/p_\mathrm{upr}$ & 1 (1, 1) & \\
-\textit{A. bipustulatus} & $p^{'}_x/p^{'}_\mathrm{lwr}$ & 1 (1, 1) & \\
-\textit{A. bipustulatus} & $q^{'}_x/p^{'}_\mathrm{upr}$ & 1 (1, 1) & \\
-\textit{A. nevadensis} & $p_x/p_\mathrm{lwr}$ & 1 (1, 1) & \\
+\textit{A. bipustulatus} & $p_x/p_\mathrm{lwr}$ & 1.000 (1.000, 1.000) &   \\
+\textit{A. bipustulatus} & $q_x/p_\mathrm{upr}$ & 1.000 (1.000, 1.000) &  \\
+\textit{A. bipustulatus} & $p^{'}_x/p^{'}_\mathrm{lwr}$ & 1.000 (1.000, 1.000) &  \\
+\textit{A. bipustulatus} & $q^{'}_x/p^{'}_\mathrm{upr}$ & 1.000 (1.000, 1.000) &  \\
+\textit{A. nevadensis} & $p_x/p_\mathrm{lwr}$ & 1.000 (1.000, 1.000) & \\
 \textit{A. nevadensis} & $q_x/p_\mathrm{upr}$ & 0.010 (0.006, 0.014)  & \\
-\textit{A. nevadensis} &  $p^{'}_x/p^{'}_\mathrm{lwr}$ & 1 (1, 1) & \\
+\textit{A. nevadensis} &  $p^{'}_x/p^{'}_\mathrm{lwr}$ & 1.000 (1.000, 1.000) & \\
 \textit{A. nevadensis} &  $q^{'}_x/q^{'}_\mathrm{upr}$ & 0.010 (-0.128, 0.148) & \\
 \hline
 
 \end{tabular}
 
-\caption{Nonparametric frequentist and Bayesian estimates of pairwise genetic distance distribution overlap/separation for the DNA barcode gap coalescent model parameters applied to \textit{A. infuscatus}, including 95\% confidence and credible intervals. CrIs are based on 4000 posterior draws.}
+\caption{Nonparametric frequentist and Bayesian estimates of pairwise genetic distance distribution overlap/separation for the DNA barcode gap coalescent model parameters applied to \textit{A. infuscatus}, including 95\% confidence and credible intervals. CrIs are based on 4000 posterior draws. All parameter estimates are reported to three decimal places of precision.}
 
 \end{table}
 
