--- a/Bayesian DNA Barcode Gap.tex
+++ b/Bayesian DNA Barcode Gap.tex
@@ -140,7 +140,7 @@ Convergence was assessed both visually and quantitatively as follows: (1) throug
 
 After sampling, a number of summary quantities were reported, including posterior means, posterior SDs, and posterior quantiles from which 95\% CrIs could be computed to make probabilistic inferences concerning true population parameters.
 
-To validate the overall correctness of the proposed statistical model given by Equation (7), as a means of comparison, posterior predictive checks were also employed to generate binomial random variates in the form of counts from the posterior predictive distribution; that is $\gamma = \{Np_x, Mq_x, Np^{'}_x, Cq^{'}_x\}$ to verify that the model adequately captures relevant features of the observed data. 
+To validate the overall correctness of the proposed statistical model given by Equation (7), as a means of comparison, posterior predictive checks (PPCs) were also employed to generate binomial random variates in the form of counts from the posterior predictive distribution; that is $\gamma = \{Np_x, Mq_x, Np^{'}_x, Cq^{'}_x\}$ to verify that the model adequately captures relevant features of the observed data. 
 
 The proposed Bayesian model outlined herein has a straightforward interpretation \\ (\textbf{Table 1}). 
 
@@ -148,7 +148,7 @@ The proposed Bayesian model outlined herein has a straightforward interpretation
 
 Herein, the \textit{Agabus} CYTB dataset analyzed by \citet{phillips2024measure} is revisited. \\ Specifically, the proposed Bayesian model is demonstrated on the species \textit{A. bipustulatus} and \textit{A. nevadensis}, since these taxa were the sole representatives for this locus, with the most and the least specimen records, respectively ($n$ = 701 and $n$ = 2) across all three assessed molecular markers. Note, DNA barcode gap estimation is only possible for species having at least two specimen records. This dataset is a prime illustrative example in several respects. First, from a statistical viewpoint, sample sizes reflect extremes in reliable parameter estimation. Second, from a DNA barcoding perspective, \textit{Agabus} comprises about 200 extant species according to the Global Biodiversity Information Facility (GBIF); yet, due to the level of convenience sampling inherent in taxonomic collection efforts for this genus, adequate representation is far from being fully realized. 
 
-MCMC parameter traceplots showed rapid mixing of chains to the stationary distribution (\textbf{Figure 2}).  Bayesian posterior estimates were reported alongside frequentist MLEs, in addition to 95\% CIs and CrIs (\textbf{Table 2}). Findings based on nonparametric MLEs and Bayseian posterior means show evidence of complete overlap in pairwise intraspecific, \\ interspecific, and combined genetic distances for \textit{A. bipustulatus} in both the $p$/$q$ and $p'$/$q'$ directions. As a result, this likely indicates that no DNA barcode gap is present for this species. Such findings are strongly reinforced by the very tight interval estimates owing to the large number of specimens sampled. On the other hand, the situation for \textit{A. nevadensis} is more nuanced.
+MCMC parameter traceplots showed rapid mixing of chains to the stationary distribution (\textbf{Figure 2}). Further, all $\hat{R}$ and ESS values (not shown) were close to their cutoffs of one and thousands of samples.  Bayesian posterior estimates were reported alongside frequentist MLEs, in addition to 95\% CIs and CrIs (\textbf{Table 2}). Findings based on nonparametric MLEs and Bayseian posterior means show evidence of complete overlap in pairwise intraspecific, interspecific, and combined genetic distances for \textit{A. bipustulatus} in both the $p$/$q$ and $p'$/$q'$ directions. As a result, this likely indicates that no DNA barcode gap is present for this species. Such findings are strongly reinforced by the very tight clustering of posterior draws (\textbf{Figure 3}) interval estimates owing to the large number of specimens sampled. On the other hand, the situation for \textit{A. nevadensis} is more nuanced (\textbf{Table 2} and \textbf{Figure 4}), suggesting less overall certainty in true parameter values. Simulated counts of overlapping specimen records from the posterior predictive distribution were found to be very close to observed counts for both species, indicating that the proposed model adequately captures underlying variation. 
 
 \section{Discussion}
 
@@ -233,7 +233,7 @@ JDP wrote the manuscript, wrote R and Stan code, as well as analysed and interpr
 
 
 
-
+\begin{landscape}
 \begin{table}[H]
 
 \centering
@@ -247,16 +247,30 @@ JDP wrote the manuscript, wrote R and Stan code, as well as analysed and interpr
 \textit{A. bipustulatus} & $q_x/p_\mathrm{upr}$ & 1.000 (1.000, 1.000) & 1.000 (0.999, 1.000) \\
 \textit{A. bipustulatus} & $p^{'}_x/p^{'}_\mathrm{lwr}$ & 1.000 (1.000, 1.000) & 1.000 (1.000, 1.000)  \\
 \textit{A. bipustulatus} & $q^{'}_x/p^{'}_\mathrm{upr}$ & 1.000 (1.000, 1.000) & 1.000 (0.999, 1.000) \\
+
+\textit{A. bipustulatus} & $y_\mathrm{lwr}$ & 491401 & 491400.018 (491396.000, 491401.000) \\
+\textit{A. bipustulatus} & $y_\mathrm{upr}$ & 2804 & 2803.019 (2799.000, 2804.000) \\
+\textit{A. bipustulatus} & $y^{'}_\mathrm{lwr}$ & 491401 & 491400.008 (491396.000, 491401.000) \\
+\textit{A. bipustulatus} & $y^{'}_\mathrm{upr}$ & 2804 & 2802.992 (2799.000, 2804.000) \\
+
 \textit{A. nevadensis} & $p_x/p_\mathrm{lwr}$ & 1.000 (1.000, 1.000) & 0.835 (0.470, 0.996) \\
 \textit{A. nevadensis} & $q_x/p_\mathrm{upr}$ & 0.010 (0.006, 0.014) & 0.010 (0.007, 0.014) \\
 \textit{A. nevadensis} &  $p^{'}_x/p^{'}_\mathrm{lwr}$ & 1.000 (1.000, 1.000) & 0.834 (0.481, 0.994) \\
 \textit{A. nevadensis} &  $q^{'}_x/q^{'}_\mathrm{upr}$ & 0.010 (-0.128, 0.148) & 0.010 (0.007, 0.014) \\
+
+\textit{A. bipustulatus} & $y_\mathrm{lwr}$ & 4 & 3.355 () \\
+\textit{A. bipustulatus} & $y_\mathrm{upr}$ & 28  & 29.151 () \\
+\textit{A. bipustulatus} & $y^{'}_\mathrm{lwr}$ & 4 & 3.325 () \\
+\textit{A. bipustulatus} & $y^{'}_\mathrm{upr}$ & 28  & 28.942 ()  \\
+
+
 \hline
+
 
 \end{tabular}
 
 \end{table}
-
+\end{landscape}
 
 \begin{figure}[H]
 
