--- a/Bayesian DNA Barcode Gap.tex
+++ b/Bayesian DNA Barcode Gap.tex
@@ -248,20 +248,20 @@ JDP wrote the manuscript, wrote R and Stan code, as well as analysed and interpr
 \textit{A. bipustulatus} & $p^{'}_x/p^{'}_\mathrm{lwr}$ & 1.000 (1.000, 1.000) & 1.000 (1.000, 1.000)  \\
 \textit{A. bipustulatus} & $q^{'}_x/p^{'}_\mathrm{upr}$ & 1.000 (1.000, 1.000) & 1.000 (0.999, 1.000) \\
 
-\textit{A. bipustulatus} & $y_\mathrm{lwr}$ & 491401 & 491400.018 (491396.000, 491401.000) \\
-\textit{A. bipustulatus} & $y_\mathrm{upr}$ & 2804 & 2803.019 (2799.000, 2804.000) \\
-\textit{A. bipustulatus} & $y^{'}_\mathrm{lwr}$ & 491401 & 491400.008 (491396.000, 491401.000) \\
-\textit{A. bipustulatus} & $y^{'}_\mathrm{upr}$ & 2804 & 2802.992 (2799.000, 2804.000) \\
+\textit{A. bipustulatus} & $y_\mathrm{lwr}$ & 491401.000 & 491400.018 (491396.000, 491401.000) \\
+\textit{A. bipustulatus} & $y_\mathrm{upr}$ & 2804.000 & 2803.019 (2799.000, 2804.000) \\
+\textit{A. bipustulatus} & $y^{'}_\mathrm{lwr}$ & 491401.000 & 491400.008 (491396.000, 491401.000) \\
+\textit{A. bipustulatus} & $y^{'}_\mathrm{upr}$ & 2804.000 & 2802.992 (2799.000, 2804.000) \\
 
 \textit{A. nevadensis} & $p_x/p_\mathrm{lwr}$ & 1.000 (1.000, 1.000) & 0.835 (0.470, 0.996) \\
 \textit{A. nevadensis} & $q_x/p_\mathrm{upr}$ & 0.010 (0.006, 0.014) & 0.010 (0.007, 0.014) \\
 \textit{A. nevadensis} &  $p^{'}_x/p^{'}_\mathrm{lwr}$ & 1.000 (1.000, 1.000) & 0.834 (0.481, 0.994) \\
 \textit{A. nevadensis} &  $q^{'}_x/q^{'}_\mathrm{upr}$ & 0.010 (-0.128, 0.148) & 0.010 (0.007, 0.014) \\
 
-\textit{A. bipustulatus} & $y_\mathrm{lwr}$ & 4 & 3.355 () \\
-\textit{A. bipustulatus} & $y_\mathrm{upr}$ & 28  & 29.151 () \\
-\textit{A. bipustulatus} & $y^{'}_\mathrm{lwr}$ & 4 & 3.325 () \\
-\textit{A. bipustulatus} & $y^{'}_\mathrm{upr}$ & 28  & 28.942 ()  \\
+\textit{A. nevadensis} & $y_\mathrm{lwr}$ & 4.000 & 3.355 (1.000, 4.000) \\
+\textit{A. nevadensis} & $y_\mathrm{upr}$ & 28.000  & 29.151 (16.000, 45.000) \\
+\textit{A. nevadensis} & $y^{'}_\mathrm{lwr}$ & 4.000 & 3.325 (1.000, 4.000) \\
+\textit{A. nevadensis} & $y^{'}_\mathrm{upr}$ & 28.000  & 28.942 (15.000, 45.000)  \\
 
 
 \hline
